save before fix navbar have collapse

--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,12 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap");
+
+.NavBar-sticky {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    box-shadow: 1px 1px 18px#2f5d62;
+}
+
 .NavBar {
-    background-color: #2F5D62;
+    position: relative;
+    background-color: #2f5d62;
     overflow: hidden;
-    z-index: 5;
     width: 100%;
     font-size: 2em;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .NavBar a {
@@ -16,18 +24,27 @@
     text-decoration: none;
     font-size: 0.8em;
     font-weight: 500;
-    color: #DFEEEA;
+    color: #dfeeea;
 }
 
 .NavBar a.logo {
+    font-size: 0.82em;
     padding-right: 1.5em;
     padding-left: 1.2em;
     color: rgb(255, 193, 79);
     font-weight: 700;
+    text-shadow: 1px 1px 1.5px rgb(255, 193, 79);
 }
 
 .NavBar .option {
     text-transform: uppercase;
+    text-shadow: 1px 1px 1.5px #dfeeea;
+}
+
+.NavBar .option:hover,
+.NavBar .hamburger:hover {
+    font-size: 0.82em;
+    opacity: 0.7;
 }
 
 .NavBar .hamburger {
@@ -46,6 +63,7 @@
     .NavBar.responsive {
         position: relative;
     }
+
     .NavBar.responsive a {
         float: none;
         display: block;
